--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,8 @@
 	--font-body: "Proxima Nova", sans-serif;
 	--font-mono: 'Fira Mono', monospace;
 
-    --color-primary: #3a77d3;
-    --color-accent: rgb(53, 183, 179);
+    --color-primary: rgb(52, 44, 182);
+    --color-accent: rgb(236,190,241);
     --color-light: #3bc2d1;
 
 
